# fonter

./: .gitignore  CMakeLists.txt  README.md  font_syntax.md
fonts/: comic.fonter  tengwar.fonter
src/: compositor.cpp  compositor.hpp  error_log.cpp  error_log.hpp  font.cpp  font.hpp  fonter.cpp  fonter.hpp  glyph.cpp  glyph.hpp  glypher.cpp  glypher.hpp  loader.cpp  loader.hpp  main.cpp  math.cpp  math.hpp  rules.hpp  symbol.cpp  symbol.hpp  texture.cpp  texture.hpp  user_config.cpp  user_config.hpp
src/lib/: clom2.cpp  stb.cpp
tests/: CMakeLists.txt  example.fonter  test_glypher.cpp  test_loader.cpp  test_texture.cpp
